fixed modal with no more hash, flickering, or jumping

--- a/_sass/1-base/mixins.scss
+++ b/_sass/1-base/mixins.scss
@@ -111,3 +111,10 @@
     transform: scaleX(1);
   }
 }
+
+@mixin absCenter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
